# Learning_ROS_for_Robotics_Programming

./: .gitignore  LICENSE  README.md
chapter2_tutorials/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
chapter2_tutorials/src/: example2_a.cpp  example3_a.cpp  example3_b.cpp
chapter3_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml
chapter3_tutorials/bag/: 2013-01-10-10-56-11.bag  2013-01-10-11-59-48.bag
chapter3_tutorials/config/: example7.vcg  example_tf.vcg
chapter3_tutorials/launch/: example7.launch
chapter3_tutorials/src/: .gitignore  example1.cpp  example2.cpp  example6.cpp  example7.cpp
chapter4_tutorials/: CMakeLists.txt  example2.vcg  mainpage.dox  manifest.xml
chapter4_tutorials/launch/: example1.launch  example2.launch
chapter4_tutorials/src/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example6.cpp  example8.cpp
chapter5_tutorials/: .bot_body1.dae.swp  .bot_body2.dae.swp  CMakeLists.txt  manifest.xml
chapter5_tutorials/launch/: gazebo.launch  gazebo_map_robot.launch  state.launch  state_xacro.launch
chapter5_tutorials/urdf/: dae.urdf  robot1.urdf  robot1_base_02.xacro  robot1_base_04.xacro
chapter6_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml
chapter6_tutorials/cfg/: Camera.cfg  CameraStereo.cfg
chapter6_tutorials/config/: chapter6_tutorials.config
chapter6_tutorials/launch/: camera.launch  camera_polling.launch  gscam.launch  (+4 more)
chapter7_tutorials/: CMakeLists.txt  manifest.xml
chapter8_tutorials/: .tipos.swp  CMakeLists.txt  manifest.xml
chapter9_tutorials/: CMakeLists.txt  stack.xml
(+49 files in other folders)
